Added Email To Registration Form

--- a/src/app/components/nurse/nurse.component.html
+++ b/src/app/components/nurse/nurse.component.html
@@ -14,8 +14,8 @@
 <table>
     <div class="container">
         <thead>
-            <tr><th *ngFor="let head of headers"><h2>{{head.name}}</h2></th></tr>
+            <!-- <tr><th *ngFor="let head of headers"><h2>{{head.name}}</h2></th></tr> -->
         </thead>
-        <tr *ngFor="let patient of patients.name"><td>{{patient}}</td></tr>
+        <!-- <tr *ngFor="let patient of patients.name"><td>{{patient}}</td></tr> -->
     </div>
 </table>
