--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 
 
-<app-registration></app-registration>
+<!-- <app-registration></app-registration> -->
 
-<app-nurse></app-nurse>
+
+
+<router-outlet></router-outlet>
