--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -33,7 +33,7 @@
 
     <br>
     <label for="RegistrationUsername">
-      New Username
+      Username
     </label>
     <input type="text" id="RegistrationUsername"
       #RegistrationUsername
@@ -44,7 +44,7 @@
 
     <br>
     <label for="RegistrationPassword">
-      New Password
+      Password
     </label>
     <input type="text" id="RegistrationPassword"
       #RegistrationPassword
