Some additional formatting

--- a/src/app/components/registration/registration.component.css
+++ b/src/app/components/registration/registration.component.css
@@ -105,7 +105,8 @@
 
   width : 60%;
 
-  color : black;
+  font-weight : 600;
+  color : rgb(0, 38, 74);
 
   background-color :rgb(126, 160, 43);
 
