updated routing for roles

--- a/src/app/components/nurse/nurse.component.html
+++ b/src/app/components/nurse/nurse.component.html
@@ -39,10 +39,11 @@
         </thead>
         <!-- <tbody>
             <a routerLink="test"><tr *ngFor=let patient of Patients>
-                <td>{{patient.name}}</td>
+                <td>{{patient.firstName}}</td>
+                <td>{{patient.lastName}}</td>
                 <td>{{patient.dob}}</td>
                 <td>{{patient.age}}</td>
-                <td>{{patient.allergy}}</td>
+                <td>{{patient.allergies}}</td>
                 <td>{{patient.height}}</td>
                 <td>{{patient.weight}}</td>
                 <td>patient.vaccinations}}</td>
