--- a/src/app/components/doctor/doctor.component.html
+++ b/src/app/components/doctor/doctor.component.html
@@ -1,6 +1,4 @@
-<p>doctor works!</p>
-
-<div class="backgroung">
+<div class="background">
 <div class="container">
 <h1>Doctor</h1>
 </div>
@@ -8,7 +6,7 @@
 <app-button class="btn btn-top-left" (btnClick) = "goBack()" text = "Back"></app-button>
 
 <div class="top-right">
-<app-button class="btn" (btnClick) = "getInfo()" text = "View User Info"></app-button>
+<app-button class="btn" (btnClick) = "viewUserInfo()" text = "View User Info"></app-button>
 <app-button class="btn" (btnClick) = "logout()" text = "Logout"></app-button>
 </div>
 
@@ -17,7 +15,7 @@
          <!-- <label for="patient-search">Search for Patients</label> -->
          <input type="text" class="form-control" id="patient-search"  name="patient-search" placeholder="Search for Patients" required>
     </div>
-    <app-button class="btn btn-search" (btnClick) = "searchPatient()" text = "Search for Patients"></app-button>
+    <app-button class="btn btn-search" (btnClick) = "getPatientsByDoctor(doctorId)" text = "Search for Patients"></app-button>
 </div>
 
 <div class="table">
