--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -26,5 +26,5 @@
         </tbody>
     </table>
 
-    <a routerLink= "profileEdit" ><app-button class="btn" text="Edit Information"></app-button></a>
+    <a routerLink= "/profileEdit" ><app-button class="btn" text="Edit Information"></app-button></a>
 </div>
