day 1 of FE work

--- a/src/app/components/diagnosis/diagnosis.component.html
+++ b/src/app/components/diagnosis/diagnosis.component.html
@@ -3,11 +3,34 @@
         <form
         #formDemo="ngForm"
         class="form-diagnose "
-        (ngSubmit)="onSubmit(userData)">
+        (ngSubmit)="onSubmit(symptoms, diagnosis)">
     
         <div class="form-group">
-            <label for ="symptom">Symptom</label>
+            <label for ="symptoms">Symptoms</label>
+            <input
+                type="text"
+                class="form-control"
+                name="symptoms"
+                id="symptoms"
+                [(ngModel)] = "symptoms"
+                required
+            />
+            <label for ="diagnosis">Diagnosis</label>
+            <input 
+                type="text"
+                class="form-control"
+                name="diagnosis"
+                id="diagnosis"
+                [(ngModel)]="diagnosis"
+                required
+            \>
+            <!-- <span
+          class="help-block"
+          *ngIf="!symptoms.valid"
+          >Please enter patient symptoms</span> -->
         </div>
+    <br>
+    <button type="submit" class="btn btn-success submit-button" [disabled]="!formDemo.valid">Subimt Diagnosis</button> 
     </form>
     
     </div>
