Semi Unique String Generator

--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -155,6 +155,10 @@
   <p> Entered Role : {{role}} </p>
   <p> Entered Email : {{email}} </p>
 
+  <button type="button" (click)="rng()">
+    rng
+  </button>
+
   </div>
 </div>
 <!-- <p class="col-sm-4"> -->
