Created Functionality To View All Currently Stored Patients With Available Fields

--- a/src/app/components/doctor/doctor.component.css
+++ b/src/app/components/doctor/doctor.component.css
@@ -65,7 +65,7 @@ input {
 }
 
 .table{
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     margin: auto;
     background: rgba(200, 220, 180, 0.1);
