nurse routing done. Get All Patients now showing patient with their list of vax and allergies. Waiting for Doctors. stretch goal age maybe?

--- a/src/app/components/nurse/nurse.component.css
+++ b/src/app/components/nurse/nurse.component.css
@@ -3,6 +3,11 @@
     position: relative;
     color: rgb(0, 38, 74);
 }
+
+table td{
+    text-align: center;
+}
+
 .background {
     background:  rgba(200, 220, 180, 0.1);
 }
