--- a/src/app/components/doctor/doctor.component.css
+++ b/src/app/components/doctor/doctor.component.css
@@ -7,6 +7,10 @@
     background:  rgba(200, 220, 180, 0.1);
 }
 
+table tr{
+    text-align: center;
+}
+
 .container{
     display: flex;
     justify-content: center;
