Add new search functionality to nurse component

--- a/src/app/components/button/button.component.css
+++ b/src/app/components/button/button.component.css
@@ -3,7 +3,7 @@ button {
     border: none;
     padding: 10px;
     margin: 0px;
-    border-radius: 5px;;
+    border-radius: 5px;
 }
 
 button:hover{
