--- a/src/app/user-auth/login/login.component.html
+++ b/src/app/user-auth/login/login.component.html
@@ -3,3 +3,4 @@
 <button (click)="onSignin(email.value, password.value)">Sign in</button>
 <button (click)="getUser()">Get user</button> 
 <button (click)="logout()">Logout</button> 
+<!-- <a routerLink="signup" routerLinkActive="active"><button>Create Account</button></a> -->
