--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -2,18 +2,18 @@
 <!-- <p class="col-sm-4"> -->
 <div id = "RegistrationDiv" class="col-sm-4">
 
-  <div id = "CenterContainerContent">
-    <h1 id="RegistrationTitle">
+  <div class = "CenterContainerContent">
+    <h1 class="RegistrationTitle">
       New User <br> Registration
     </h1>
   </div>
 
-  <form class = "d-flex col-sm-4" id = "RegistrationForm">
+  <form class = "d-flex col-sm-4" class = "RegistrationForm">
 
     <label for="RegistrationFirstName">
       First Name
     </label>  
-    <input type="text" id="RegistrationFirstName" 
+    <input type="text" class="RegistrationFirstName" 
       #RegistrationFirstName 
       (keyup.enter)="updateFirstName(RegistrationFirstName.value)"
       (blur)="updateFirstName(RegistrationFirstName.value);"
@@ -24,7 +24,7 @@
     <label for="RegistrationLastName">
       Last Name
     </label>
-    <input type="text" id="RegistrationLastName"
+    <input type="text" class="RegistrationLastName"
       #RegistrationLastName
       (keyup.enter)="updateLastName(RegistrationLastName.value)"
       (blur)="updateLastName(RegistrationLastName.value);"
@@ -35,7 +35,7 @@
     <label for="RegistrationUsername">
       Username
     </label>
-    <input type="text" id="RegistrationUsername"
+    <input type="text" class="RegistrationUsername"
       #RegistrationUsername
       (keyup.enter)="updateUsername(RegistrationUsername.value)"
       (blur)="updateUsername(RegistrationUsername.value)"
@@ -46,7 +46,7 @@
     <label for="RegistrationPassword">
       Password
     </label>
-    <input type="text" id="RegistrationPassword"
+    <input type="text" class="RegistrationPassword"
       #RegistrationPassword
       (keyup.enter)="updatePassword(RegistrationPassword.value)"
       (blur)="updatePassword(RegistrationPassword.value)"
@@ -70,11 +70,11 @@
     <p id="RegistrationSpacer"></p>
     <p id="RegistrationSpacer" *ngIf="roleValidated == true || roleValidated === null"></p> -->
     
-    <div id="RegistrationRoleRadios">
-      <p for="RoleValidation" id="RegistrationRoleTitle">
+    <div class="RegistrationRoleRadios">
+      <p for="RoleValidation" class="RegistrationRoleTitle">
         Hospital Role
       </p>
-      <input type = "radio" id="RegistrationRole1"
+      <input type = "radio" class="RegistrationRole1"
         #RegistrationRole1
         name="Role" value="nurse"
         (click)="updateRole(RegistrationRole1.value)">
@@ -82,7 +82,7 @@
         Nurse
       </label>
 
-      <input type = "radio" id="RegistrationRole2"
+      <input type = "radio" class="RegistrationRole2"
         #RegistrationRole2
         name="Role" value="doctor"
         (click)="updateRole(RegistrationRole2.value)">
@@ -95,23 +95,23 @@
     <label for="RegistrationEmail">
       Email
     </label>
-    <input type="text" id="RegistrationEmail"
+    <input type="text" class="RegistrationEmail"
       #RegistrationEmail
       (keyup.enter)="updateEmail(RegistrationEmail.value)"
       (blur)="updateEmail(RegistrationEmail.value)"
       onkeydown="return event.key != 'Enter';"
       autocomplete = "off">
-    <p *ngIf="emailValidated == false" id="RegistrationValidationMessage"> 
+    <p *ngIf="emailValidated == false" class="RegistrationValidationMessage"> 
       Please enter a valid email
     </p>
-    <p id="RegistrationSpacer"></p>
-    <p id="RegistrationSpacer" *ngIf="emailValidated == true || emailValidated === null"></p>
+    <p class="RegistrationSpacer"></p>
+    <p class="RegistrationSpacer" *ngIf="emailValidated == true || emailValidated === null"></p>
 
     <div id="RegistrationCovidRadios">
-      <p for="CovidValidation" id="RegistrationCovidTitle">
+      <p for="CovidValidation" clas="RegistrationCovidTitle">
         Do you currently have Covid-19 Symptoms?
       </p>
-      <input type = "radio" id="RegistrationCovidStatus1"
+      <input type = "radio" class="RegistrationCovidStatus1"
         #RegistrationCovidStatus1
         name="Covid" value="Yes"
         (click)="updateCovidStatus(RegistrationCovidStatus1.value)">
@@ -119,7 +119,7 @@
         Yes
       </label>
 
-      <input type = "radio" id="RegistrationCovidStatus2"
+      <input type = "radio" class="RegistrationCovidStatus2"
         #RegistrationCovidStatus2
         name="Covid" value="No"
         (click)="updateCovidStatus(RegistrationCovidStatus2.value)">
@@ -128,9 +128,9 @@
       </label>
     </div>
 
-    <div id="CenterContainerContent">
+    <div class="CenterContainerContent">
     <button type="button" (click)="updateValues()" 
-      id="RegisterButton" [disabled] = "registrationButtonSetting"
+      class="RegisterButton" [disabled] = "registrationButtonSetting"
       *ngIf="covidStatus == false">
       Register User
     </button>
