--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -31,7 +31,7 @@
       onkeydown="return event.key != 'Enter';"
       autocomplete = "off">
 
-    <br>
+    <!-- <br>
     <label for="RegistrationUsername">
       Username
     </label>
@@ -40,7 +40,7 @@
       (keyup.enter)="updateUsername(RegistrationUsername.value)"
       (blur)="updateUsername(RegistrationUsername.value)"
       onkeydown="return event.key != 'Enter';"
-      autocomplete = "off">
+      autocomplete = "off"> -->
 
     <br>
     <label for="RegistrationPassword">
