--- a/src/app/user-auth/login/login.component.html
+++ b/src/app/user-auth/login/login.component.html
@@ -1,3 +1,5 @@
+
+<p>You current log status is => {{log}}</p>
 <input type = "text" #email>
 <input type = "password" #password>
 <button (click)="onSignin(email.value, password.value)">Sign in</button>
